--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "vite dev --port 5173",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
@@ -33,6 +33,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
+    "tanstack-theme-kit": "^0.2.1",
     "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^6.0.2"
   },
