--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
                 },
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://apis.google.com; connect-src 'self' https://convex.cloud https://*.convex.cloud wss://*.convex.cloud https://www.googleapis.com; img-src 'self' data: https://*.googleusercontent.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:;"
+                    "value": "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://apis.google.com; connect-src 'self' https://convex.cloud https://*.convex.cloud wss://*.convex.cloud https://www.googleapis.com; img-src 'self' data: https://*.googleusercontent.com https://yt3.ggpht.com https://yt3.googleusercontent.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:;"
                 }
             ]
         }
