--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-    "name": "unsub",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite dev --port 5173",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "vitest run",
-        "lint": "oxlint",
-        "lint:fix": "oxlint --fix",
-        "format": "prettier",
-        "check": "prettier --write . && eslint --fix"
-    },
-    "dependencies": {
-        "@convex-dev/auth": "^0.0.90",
-        "@convex-dev/react-query": "0.1.0",
-        "@tailwindcss/vite": "^4.1.18",
-        "@tanstack/react-devtools": "^0.7.11",
-        "@tanstack/react-router": "^1.159.5",
-        "@tanstack/react-router-devtools": "^1.159.5",
-        "@tanstack/react-router-ssr-query": "^1.159.5",
-        "@tanstack/react-start": "^1.159.5",
-        "@tanstack/router-plugin": "^1.159.5",
-        "@types/bun": "^1.3.9",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "convex": "^1.31.7",
-        "lucide-react": "^0.561.0",
-        "next-themes": "^0.4.6",
-        "nitro": "npm:nitro-nightly@latest",
-        "radix-ui": "^1.4.3",
-        "react": "^19.2.4",
-        "react-dom": "^19.2.4",
-        "sonner": "^2.0.7",
-        "tailwind-merge": "^3.4.0",
-        "tailwindcss": "^4.1.18",
-        "tanstack-theme-kit": "^0.2.1",
-        "tw-animate-css": "^1.4.0",
-        "vite-tsconfig-paths": "^6.1.1"
-    },
-    "devDependencies": {
-        "@tanstack/devtools-vite": "^0.3.12",
-        "@tanstack/eslint-config": "^0.3.4",
-        "@types/node": "^22.19.11",
-        "@types/react": "^19.2.14",
-        "@types/react-dom": "^19.2.3",
-        "@vitejs/plugin-react": "^5.1.4",
-        "babel-plugin-react-compiler": "^1.0.0",
-        "oxlint": "^1.47.0",
-        "prettier": "^3.8.1",
-        "typescript": "^5.9.3",
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18",
-        "web-vitals": "^5.1.0"
-    }
+  "name": "unsub",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev --port 5173",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest run",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix",
+    "format": "prettier",
+    "check": "prettier --write . && eslint --fix"
+  },
+  "dependencies": {
+    "@convex-dev/auth": "^0.0.90",
+    "@convex-dev/react-query": "0.1.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-devtools": "^0.7.11",
+    "@tanstack/react-router": "^1.159.5",
+    "@tanstack/react-router-devtools": "^1.159.5",
+    "@tanstack/react-router-ssr-query": "^1.159.5",
+    "@tanstack/react-start": "^1.159.5",
+    "@tanstack/react-virtual": "^3.13.18",
+    "@tanstack/router-plugin": "^1.159.5",
+    "@types/bun": "^1.3.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.31.7",
+    "lucide-react": "^0.561.0",
+    "next-themes": "^0.4.6",
+    "nitro": "npm:nitro-nightly@latest",
+    "radix-ui": "^1.4.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "tanstack-theme-kit": "^0.2.1",
+    "tw-animate-css": "^1.4.0",
+    "vite-tsconfig-paths": "^6.1.1"
+  },
+  "devDependencies": {
+    "@tanstack/devtools-vite": "^0.3.12",
+    "@tanstack/eslint-config": "^0.3.4",
+    "@types/node": "^22.19.11",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "oxlint": "^1.47.0",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18",
+    "web-vitals": "^5.1.0"
+  }
 }
